# Extended-Call-Log

./: .project  README.md
data/: extcalllog.desktop  extcalllog.desktop.in  org.maemo.extcalllog.service  org.maemo.extcalllog.service.in
data/icons/26x26/: extcalllog.png.en
debian/: changelog  control  postinst
extcalllog/: Makefile.am  configure.ac
extcalllog/data/: extcalllog.desktop  extcalllog.desktop.in
extcalllog/debian/: changelog  control  rules
extcalllog/src/: Makefile.am  filters.c  filters.h  main.c  main.h
extcalllog/src/rtcom-eventlogger-ui/: rtcom-log-columns.h  rtcom-log-model.c  rtcom-log-model.h  rtcom-log-search-bar.c  rtcom-log-search-bar.h  rtcom-log-view.c  rtcom-log-view.h
po/: Makefile
src/: localisation.h  main.c  main.h  settings.c  settings.h
src/rtcom-eventlogger-ui/: rtcom-log-model.c  rtcom-log-search-bar.c  rtcom-log-view.c  utf8.c  utf8.h
tags/extcalllog/: Makefile.am  configure.ac
tags/extcalllog-0.4/: configure.ac
tags/extcalllog-0.4/data/: Makefile.am
tags/extcalllog-0.4/debian/: changelog
tags/extcalllog-0.4/src/: Makefile.am
tags/extcalllog-0.4/src/rtcom-eventlogger-ui/: rtcom-log-model.c
tags/extcalllog-0.5/data/: extcalllog.desktop.in
tags/extcalllog-0.5/src/: main.c
tags/extcalllog-0.6/: configure.ac
tags/extcalllog-0.6/data/icons/48x48/: extcalllog.png.en
tags/extcalllog-0.6/src/: filters.h  main.c
tags/extcalllog/data/: extcalllog.desktop
tags/extcalllog/debian/: control  copyright
tags/extcalllog/extcalllog/: .cproject  configure.ac
tags/extcalllog/extcalllog/debian/: changelog
tags/extcalllog/extcalllog/po/: Makefile
tags/extcalllog/extcalllog/src/: filters.h
tags/extcalllog/po/: Makefile
trunk/extcalllog/: Makefile.am
trunk/extcalllog/data/: extcalllog.desktop.in
trunk/extcalllog/debian/: changelog  control
trunk/extcalllog/po/: Makefile
trunk/extcalllog/src/: Makefile.am  filters.h  main.c
trunk/extcalllog/src/rtcom-eventlogger-ui/: rtcom-log-search-bar.h
