EXTRA_DIST = \
	main.c main.h settings.c settings.h filters.c filters.h \
	rtcom-eventlogger-ui/rtcom-log-columns.h \
	rtcom-eventlogger-ui/rtcom-log-model.h \
	rtcom-eventlogger-ui/rtcom-log-model.c \
	rtcom-eventlogger-ui/rtcom-log-search-bar.h \
	rtcom-eventlogger-ui/rtcom-log-search-bar.c \
	rtcom-eventlogger-ui/rtcom-log-view.h \
	rtcom-eventlogger-ui/rtcom-log-view.c \
	rtcom-eventlogger-ui/utf8.h \
	rtcom-eventlogger-ui/utf8.c \
	he-about-dialog.h he-about-dialog.c
